...
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.stretch,
              children: [
                const SizedBox(height: 48),
                
                Text(
                  'Welcome\nBack!',
                  style: Theme.of(context).textTheme.displayLarge,
                ).animate().fade(duration: 600.ms).slideY(begin: 0.2, end: 0, curve: Curves.easeOutQuart),
                
                const SizedBox(height: 12),
                
                Text(
...
